Prevent multiple scrollbars in IE
The productInfo section needs to scroll, because the
content is sometimes too long that it covers the cart
messages. Because productInfo is on the right side, in IE
you have 2 scrollbars next to each other (productInfo and body
scrollbars).

Fixes DD 71427-250

--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_productInfo.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_productInfo.scss
@@ -6,6 +6,7 @@
   width: 100%;
   max-width: 300px;
   background-color: $c-smoke;
+  -ms-overflow-style: none;
 
   ul {
     margin-top: $indent__m;
